--- a/index.html
+++ b/index.html
@@ -45,17 +45,16 @@
                                                     <!-- <div class="intro__decor">
                                                         NEW
                                                     </div> -->
-                                                    <div class="intro__title">Донер стрипс</div>
+                                                    <div class="intro__title">Double Сheeseburger</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
-                                                            <span class="intro__text">Стрипсы куриные, Булочка Датская
-                                                                , Помидор, Огурец(соленый), Соус</span>
+                                                            <span class="intro__text">Солнечная булочка, Две Говяжьи котлеты,Сырная котлета, Сыр, Айсберг, Огурец(соленый), Соус гриль, Кетчуп</span>
                                                         </div>
                                                     </div>
                                                 </div>
 
                                                 <div class="intro__price">
-                                                    <span>240 руб.</span>
+                                                    <span>420 руб.</span>
                                                 </div>
 
                                             </div>
@@ -97,7 +96,7 @@
                                             </div>
                                             <div class="intro__row">
                                                 <div class="intro__col">
-                                                    <div class="intro__title">Cheese - Бургер </div>
+                                                    <div class="intro__title">Сheeseburger </div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">Солнечная булочка , Котлета
