--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                                                     <div class="intro-footer__price"><span>120/150 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
-                                                    <div class="intro-footer__text">Кола/Fanta Ж/Б</div>
+                                                    <div class="intro-footer__text">Кола/Fanta/Sprite Ж/Б</div>
                                                     <span class="intro-footer__subtext">250мл </span>
                                                     <div class="intro-footer__price"><span>90 руб.</span></div>
                                                 </div>
@@ -482,6 +482,11 @@
                                                     <div class="intro-footer__text"> Нефильтрованное</div>
                                                     <span class="intro-footer__subtext">0,5л</span>
                                                     <div class="intro-footer__price"><span>110 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Stella Artois бут. </div>
+                                                    <span class="intro-footer__subtext">0,44мл</span>
+                                                    <div class="intro-footer__price"><span>160 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Corona Extra бут. </div>
